--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 # compiled output
 /dist
 /node_modules
-
+/static
+static
+./static
+/.env
+.env
+./.env
 # Logs
 logs
 *.log
@@ -10,11 +15,6 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-
-.env
-./.env
-/.env
-
 
 # OS
 .DS_Store
